--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,10 @@ dist.jar=${dist.dir}/Assignment1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.2.4.jar=lib\\gson-2.2.4.jar
-file.reference.jt400.jar=..\\JDBC Drivers\\IBM i DB2 JDBC\\jt400.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.2.4.jar}:\
-    ${file.reference.jt400.jar}
+    ${file.reference.gson-2.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
